--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container" id="mainContainer" style="visibility: hidden;">
         <header>
             <h1 id="tituloCarrera">Malla Curricular - Medicina Veterinaria</h1>
             <div class="profile-section" style="position: absolute; top: 20px; right: 40px;">
@@ -109,7 +109,7 @@
             <!-- Los semestres se generarán dinámicamente aquí -->
         </main>
         <footer>
-            <p id="footerText">© 2024 Malla Curricular - Medicina Veterinaria. Todos los derechos reservados.</p>
+            <p id="footerText">© 2025 Malla Curricular - Medicina Veterinaria. Todos los derechos reservados.</p>
         </footer>
         <!-- <section id="horarioSection"></section> -->
         <div id="horarioVisualModal" class="modal-horario">
